# m9-ec-encontros

./: README.md
.github/workflows/: deploy.yaml  docusaurus-deploy.yaml  test-deploy.yaml  test-go-tdd.yaml  test-python-tdd.yaml
Exemplos/E01/Device-Go/: go.mod  publisher.go  subscriber.go
Exemplos/E01/Device-Python/: publisher.py  subscriber.py
Exemplos/E01/Paho-Go/: go.mod  publisher.go  subscriber.go
Exemplos/E01/Paho-Python/: mosquitto.conf  publisher.py  subscriber.py
Exemplos/E02/Tdd-Go/: calculadora_test.go
Exemplos/E02/Tdd-Python/: .flake8  setup.py
Exemplos/E02/goTdd/: calculadora.go  go.mod
Exemplos/E02/pyTdd/: setup.cfg  tox.ini
Exemplos/E02/pyTdd/Calculator/: Operations.py
Exemplos/E02/pyTdd/pyTdd/Calculator/: Operations.py
Exemplos/E02/pyTdd/tests/: test_calculator.py
Exemplos/E04/goHive/: go.mod  publisher.go  subscriber.go
Exemplos/E04/pythonHive/: publisher.py  subscriber.py
Exemplos/E06/goSqlite/: exemplo.db  go.mod  teste_sqlite.go
Exemplos/E06/pythonSqlite/: executemany.py  executescript.py  teste_sqlite.py
Exemplos/E07/mongogo/: go.mod  mongogo.go  mongogoroutines.go
Exemplos/E07/motor/: mongo_test.py
Exemplos/E07/pymongo/: mongo_test.py
Exemplos/E09/mongogo_atlas/: go.mod  mongogo_atlas.go
Exemplos/E09/python_atlas/: python_atlas.py  python_atlas_motor.py
Exemplos/E11/go-driver/: go.mod  kafka-test.go
Exemplos/E11/python-driver/: kafka-test.py
Exemplos/E12/python-confluent/: confluent.py
Material/: docusaurus.config.js  package-lock.json  package.json
Material/docs/: intro.md  tgaaw.md  wyk.md
(+94 files in other folders)
